--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
 .App {
-  text-align: center;
+  display: flex;
+  flex-direction: row;
+  height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+.workspace{
+  width: 100%;
+  height: 100%;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
+}
+
+.transferfunctions{
+  display: flex;
+  justify-content: space-around;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  width: 100%;
+}
+
+.graphs{
+  display: flex;
+  justify-content: space-around;
+}
+
+.graph{
+  width: 400px;
+  height: 225px;
+  border: solid 2px;
+}
+
+.downloadbutton{
+  padding: 2vh;
+  border-radius: 0.5vh;
+  border: none;
+  background-color:#2191ED;
   color: white;
+  margin-left: auto;
+  margin-right: 10vh;
+  cursor: pointer;
+  transition: 300ms;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.downloadbutton:hover{
+  transform: scale(1.2);
 }
